# Cubic-slicer

./: CMakeLists.txt  README.md
include/: sliser.h
src/: main.cpp  sliser.cpp
